[gd_scene load_steps=7 format=3 uid="uid://dx6p8oed05e4q"]

[ext_resource type="Texture2D" uid="uid://b5hf2886kqgh5" path="res://Assets/Background/Radar/GreenRadar/greenRadar (16).png" id="1_5s5hm"]
[ext_resource type="Script" path="res://Scripts/MainMenu/MainMenuControl.gd" id="1_raduc"]
[ext_resource type="Texture2D" uid="uid://dq8m8yadhxuss" path="res://Assets/UI/MiniPanel06.jpg" id="2_7e3wq"]
[ext_resource type="PackedScene" uid="uid://drh788ppk1ccw" path="res://Scenes/MainMenu/OptionsMenu.tscn" id="3_q52v0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k2ps8"]
texture = ExtResource("1_5s5hm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2w1pa"]
texture = ExtResource("2_7e3wq")

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_raduc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_k2ps8")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2w1pa")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainMenu" type="VBoxContainer" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Start" type="Button" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/MainMenu"]
layout_mode = 2
text = "Lancer une partie"

[node name="Load" type="Button" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/MainMenu"]
layout_mode = 2
text = "Charger une partie"

[node name="Options" type="Button" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/MainMenu"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/MainMenu"]
layout_mode = 2
text = "Quitter"

[node name="OptionsMenu" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer" instance=ExtResource("3_q52v0")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="pressed" from="PanelContainer/CenterContainer/PanelContainer/MarginContainer/MainMenu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/PanelContainer/MarginContainer/MainMenu/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/PanelContainer/MarginContainer/MainMenu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/PanelContainer/MarginContainer/MainMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="exit" from="PanelContainer/CenterContainer/PanelContainer/MarginContainer/OptionsMenu" to="." method="_on_options_menu_exit"]
